cluster/infra/longhorn-system/longhorn/service-minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  labels:
    app.kubernetes.io/name: nas
    app.kubernetes.io/instance: nas
spec:
  type: ExternalName
  externalName: nas.hosts.alexsaphir.com
  ports:
    - name: http
      port: &port 9000
      protocol: TCP
      targetPort: *port
