cluster/infra/longhorn-system/longhorn/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-frontend
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'longhorn.talos.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system
      sectionName: https
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
